--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,19 @@
 {
-  "extends": "next/core-web-vitals"
-}
-
-//"next/core-web-vitals"
-
-/* ["airbnb",
-  "airbnb-typescript"],
+  "extends": [
+   "airbnb",
+    "airbnb-typescript",
+    "prettier"
+  ],
   "parserOptions": {
-      "project": "./tsconfig.json"
-     },
+    "project": "./tsconfig.json"
+  },
   "rules": {
-    "@typescript-eslint/quotes": 0,
-    "import/prefer-default-export": 0,
-    "react/function-component-definition": 0,
-    "arrow-body-style": 0,
-    "react/react-in-jsx-scope": 0,
+    "react/prop-types": 0,
     "react/jsx-props-no-spreading": 0,
-    "react/no-danger": 0
-  } */
+    "react/function-component-definition": 0,
+    "import/prefer-default-export": 0,
+    "react/react-in-jsx-scope": 0,
+    "react/require-default-props": 0
+  },
+  "ignorePatterns": ["*.config.js"]
+}
