--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.80",
@@ -15,6 +16,7 @@
     "@types/node": "18.11.14",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/react-toastify": "^4.1.0",
     "axios": "^1.1.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
@@ -22,16 +24,26 @@
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.41.2",
+    "react-hook-form": "^7.42.1",
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.6",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
+    "@types/prettier": "^2",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "cypress": "^12.3.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0"
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.6.0",
+    "husky": "^8.0.0",
+    "prettier": "^2.8.3"
+  },
+  "volta": {
+    "node": "19.4.0",
+    "yarn": "1.22.19"
   }
 }
