--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "@radix-ui/react-alert-dialog": "^1.0.2",
     "@stitches/react": "^1.2.8",
     "@types/node": "18.11.14",
     "@types/react": "18.0.26",
@@ -20,6 +21,7 @@
     "axios": "^1.1.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "firebase": "^9.16.0",
     "framer-motion": "^8.0.2",
     "next": "13.0.6",
     "react": "18.2.0",
